moved  frame button indicators into a list for accssibility reading 2 of 7 sort of thing

--- a/2018-04-25-MediaCarousel/sqlNewStyles.css
+++ b/2018-04-25-MediaCarousel/sqlNewStyles.css
@@ -5259,3 +5259,13 @@ sqlstaticmenu #sql_static_menu_1 li a.theme-transparent:focus{
     right: 0px !important;
 }
 /*********Bug 346848 fix***************/
+
+/*********Accessibility fix - page indicators to a list for proper navigation***************/
+#mediaCarouselPageButtons {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+#mediaCarouselPageButtons li {
+    float: left;
+}
