change the navigation to bottom of carousel to let frames get tab focus first

--- a/2018-04-25-MediaCarousel/sqlNewStyles.css
+++ b/2018-04-25-MediaCarousel/sqlNewStyles.css
@@ -870,6 +870,7 @@ a.c-call-to-action+a.c-call-to-action{
 
 .cp-media-carousel-with-frames .carousel-navigation {
     position: absolute;
+    top: 0;
     height: 384px;
     width: 100%;
 }
