--- a/2018-04-25-MediaCarousel/sqlNewStyles.css
+++ b/2018-04-25-MediaCarousel/sqlNewStyles.css
@@ -872,7 +872,10 @@ image-tabs-with-internal-menu.internalmenu .image-tab-submenu a,
     margin: auto;
     z-index: 110;
     padding: 0;
-    background-color: white;
+    background-color: transparent;
+}
+.cp-media-carousel-with-frames .carousel-navigation .carousel-button:focus {
+    outline: 1px dashed #000;
 }
 
 .cp-media-carousel-with-frames .carousel-navigation .carousel-prev {
