nothing really - end of day

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/cpStyles.css
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/cpStyles.css
@@ -8812,3 +8812,9 @@ outline: 2px dashed #fff !important;
 .iframeBorder{border:0;overflow:hidden}
 
 /*Iframe CSS end*/
+
+/* Zoom 200 fix */
+.carousel-body .c-paragraph-3 {
+    max-width: 95%;
+    margin: 0 auto;
+}
