carousel arrow is tracking properly all viewports

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/cpStyles.css
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/cpStyles.css
@@ -9336,9 +9336,9 @@ CP_CenterImageWithSideText .Bottom-content {
     .cp-image-tab-carousel .carousel-content-list {
         height: 431px;
     }
-    .carousel-arrow-slider {
+    /* .carousel-arrow-slider {
         display: none;
-    }
+    } */
 }
 
 /* VIEWPORT 768 */
