revereted SiteMuse to theuse of a tags

--- a/2018-08-14-SQLServerResources-Acc/sqlNewStyles.css
+++ b/2018-08-14-SQLServerResources-Acc/sqlNewStyles.css
@@ -1114,7 +1114,7 @@
      cursor:pointer;
      text-decoration:none;
 }
- .sql-RightNavTab .sql-lefttab .sql-accordion-tab-list ul li.tab-item{
+ .sql-RightNavTab .sql-lefttab .sql-accordion-tab-list ul li a.tab-item{
      text-decoration: none;
      display: block;
      padding: 22px 0;
