just rebooting - don't trust machine

--- a/2018-08-06-MediaCarouselAcc/sqlNewStyles.css
+++ b/2018-08-06-MediaCarouselAcc/sqlNewStyles.css
@@ -970,6 +970,10 @@ image-tabs-with-internal-menu.internalmenu .image-tab-submenu a,
     background: #005da6;
 }
 
+.cp-media-carousel-with-frames .carousel-group .carousel-frame .carousel-frame-link:focus {
+    outline: #000 dashed 1px;
+}
+
 /* .cp-media-carousel-with-frames .carousel-group .carousel-frame .carousel-content .carousel-blue-cta:after {
     content: "";
 } */
